tests/NormalTests/paczka1/small_fuzzy/84700216.err
Error in line 1: fxFzL S677 83,7
Error in line 5: SGy S461 78,3
Error in line 7: SGy A118 55,4
